--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -40,18 +40,6 @@
 }
 
 
-/* LIGHTBOX CUSTOMIZATION STYLES */
-
-.lb-dataContainer {
-	max-width: 600px;
-	margin-top: 50px;
-}
-
-.lb-data .lb-caption {
-	font-family: Courier;
-	line-height: 1.4em;
-}
-
 
 /* MEDIA QUERIES */
 
@@ -69,3 +57,16 @@
 @media (min-width: 1024px) {
 	
 }
+
+/* LIGHTBOX PLUGIN CUSTOMIZATION STYLES 
+
+.lb-dataContainer {
+	max-width: 600px;
+	margin-top: 50px;
+}
+
+.lb-data .lb-caption {
+	font-family: Courier;
+	line-height: 1.4em;
+}
+*/
