overlay layout adjustments
limited overlay image width for responsiveness on smaller screens
added top margin to overlay image
centered overlay caption w/auto margin

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -53,12 +53,15 @@
 }
 
 #overlay img {
+	width: 80%;
+	margin-top: 10%;
 	max-width: 780px;
 }
 
 #overlay p {
 	color: white;
 	max-width: 600px;
+	margin: auto;
 }
 
 
