--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -27,6 +27,11 @@
 	max-width: 460px;
 }
 
+.search:focus {
+	outline: none;
+	border: 2px solid #85b46b;
+}
+
 /* GALLERY STYLES */
 
 .gallery {
@@ -50,29 +55,46 @@
 	left: 0;
 	display: none;
 	text-align: center;
+
 }
 
+/*#overlay-inner {
+	width: 100%;
+	height: 90%;
+	display: flex;
+	flex-direction: row;
+	border: 1px solid red;
+}*/
+
 #overlay img {
-	width: 80%;
 	margin-top: 10%;
+	width: 80%;
 	max-width: 780px;
 }
 
 #overlay img,
-#left-arrow,
-#right-arrow {
+#overlay button {
 	display: inline-block;
 }
 
-#left-arrow,
-#right-arrow {
+#overlay button {
+	position: relative;
+	background-color: rgba(0,0,0,0);
 	width: 10%;
-	max-width: 40px;
 	font-size: 4em;
+	padding: 40px 10px;
+	color: white;
+	border: none;
+
+}
+
+#overlay button:focus {
+	outline: none;
 }
 
 #overlay p {
 	color: white;
+	width: 60%;
 	max-width: 600px;
 	margin: auto;
 }
@@ -90,21 +112,10 @@
 	.gallery {
 		flex-wrap: wrap;
 	}
+
 }
 
 @media (min-width: 1024px) {
 	
 }
 
-/* LIGHTBOX PLUGIN CUSTOMIZATION STYLES 
-
-.lb-dataContainer {
-	max-width: 600px;
-	margin-top: 50px;
-}
-
-.lb-data .lb-caption {
-	font-family: Courier;
-	line-height: 1.4em;
-}
-*/
