--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -50,7 +50,7 @@
 	background: rgba(0,0,0,0.7);
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	display: none;
@@ -58,34 +58,19 @@
 
 }
 
-/*#overlay-inner {
-	width: 100%;
-	height: 90%;
-	display: flex;
-	flex-direction: row;
-	border: 1px solid red;
-}*/
-
 #overlay img {
 	margin-top: 10%;
 	width: 80%;
 	max-width: 780px;
 }
 
-#overlay img,
-#overlay button {
-	display: inline-block;
-}
-
-#overlay button {
-	position: relative;
-	background-color: rgba(0,0,0,0);
+.arrow {
+	background-color: transparent;
 	width: 10%;
 	font-size: 4em;
 	padding: 40px 10px;
 	color: white;
 	border: none;
-
 }
 
 #overlay button:focus {
@@ -97,6 +82,7 @@
 	width: 60%;
 	max-width: 600px;
 	margin: auto;
+	display: block;
 }
 
 
@@ -115,7 +101,4 @@
 
 }
 
-@media (min-width: 1024px) {
-	
-}
 
