--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -15,12 +15,11 @@
 	height: 7em;
 	margin: auto;
 	padding: 1em .5em;
-
 }
 
 .search {
 	height: 2.5em;
-	line-height: 16px;
+	font-size: 16px;
 	border: 2px solid #e5e5e5;
 	border-radius: 5px;
 	width: 100%;
@@ -34,10 +33,13 @@
 
 /* GALLERY STYLES */
 
+
 .gallery {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
+	/*background-image: radial-gradient(ellipse farthest-corner at 45px 45px , #FFFFFF 0%, #157A6B 50%, #072924 95%);
+*/
 }
 
 .thumbnail {
@@ -46,7 +48,8 @@
 
 /* OVERLAY STYLES */
 
-#overlay {
+#overlay,
+#overlayTwo {
 	background: rgba(0,0,0,0.7);
 	width: 100%;
 	height: 100%;
@@ -57,8 +60,17 @@
 	text-align: center;
 }
 
+#inner-overlay {
+	display: flex;
+	flex-direction: row;
+	width: 80%;
+	height: 80%;
+	align-items: center;
+	justify-content: center;
+	margin: auto;
+}
+
 #overlay img {
-	margin-top: 10%;
 	width: 80%;
 	max-width: 780px;
 }
@@ -83,6 +95,18 @@
 	margin: auto;
 	display: block;
 }
+
+.hidden {
+	display: none;
+}
+
+#youtube-canvas {
+	width: 640px;
+	height: 385px;
+	margin: auto;
+	margin-top: 10%;
+}
+
 
 
 
