--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -4,8 +4,8 @@
 .gallery {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
+	align-items: center;
 	box-sizing: border-box;
 }
 
@@ -43,10 +43,10 @@
 	padding-top: 7em;
 }
 
-.thumbnail,
-.video-thumbnail {
-	margin: 0 30px 60px 30px;
+.thumbnail {
+	margin: 30px auto 30px;
 }
+
 
 /* OVERLAY STYLES */
 
@@ -66,10 +66,9 @@
 	display: flex;
 	flex-direction: row;
 	width: 80%;
-	height: 80%;
-	align-items: center;
 	justify-content: center;
-	margin: auto;
+	align-items: center;
+	margin: 10% auto 2%;
 
 }
 
@@ -80,7 +79,7 @@
 
 .arrow {
 	background-color: transparent;
-	width: 10%;
+	width: 15%;
 	font-size: 4em;
 	padding: 40px 10px;
 	color: white;
@@ -124,7 +123,18 @@
 	.gallery {
 		flex-wrap: wrap;
 	}
+	.thumbnail {
+	margin: 0 30px 60px 30px;
+}
 
 }
+
+/*@media (min-width: 720px) {
+	#inner-overlay {
+		align-items: center;
+		margin: 10% auto 2%;
+	}
+}
+*/
 
 
