--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -50,8 +50,7 @@
 
 /* OVERLAY STYLES */
 
-#overlay,
-#overlayTwo {
+#overlay {
 	background: rgba(0,0,0,0.7);
 	width: 100%;
 	height: 100%;
@@ -103,10 +102,9 @@
 }
 
 #youtube-canvas {
-	width: 640px;
-	height: 385px;
+	width: 426px;
+	height: 240px;
 	margin: auto;
-	margin-top: 10%;
 }
 
 
@@ -123,18 +121,26 @@
 	.gallery {
 		flex-wrap: wrap;
 	}
+
 	.thumbnail {
 	margin: 0 30px 60px 30px;
-}
+	}
 
 }
 
-/*@media (min-width: 720px) {
-	#inner-overlay {
-		align-items: center;
-		margin: 10% auto 2%;
+@media (min-width: 720px) {
+	#youtube-canvas {
+		width: 640px;
+		height: 360px;
 	}
 }
-*/
+
+@media (min-width: 1000px) {
+	#youtube-canvas {
+		width: 854px;
+		height: 480px;
+	}
+}
+
 
 
